
	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lots of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.
		For ISDN and POTS calls, mbtask now decides which tty to use,
		mbcico gets the tty to use as option on the commandline.
		Keeps track of the number of mailers running.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		Remove some obsolete code that is handled by mbtask.
		Added some debug logmessages in ttyio.

	mbout:
		The status display has now 9 digits for the outbound size.

	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.
		Added support for external message editor written by Redy.
		Doors are now passed the parameter to display a prompt after
		the door or return silently.
		Fixed lharc file return code to LHA.

	mbnewusr:
		New users have the default internal fullscreen editor.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.
		It will use the registration date instead.

	hatch:
		A new shellscript to hatch files in a tic area.

	mbuseradd:
		Added support for vpopmail, vadduser command.

	mbpasswd:
		Added support for vpopmail, vpasswd command.

	mbuser:
		Added support for vpopmail, vdeluser command.

	examples:
		The Makefile now selects the right little or big endian menu
		files to install.
		Rebuild the menus and txtfiles for the new external editor.
