@@ -5,6 +5,7 @@
 int each(faddr *, char, int, char *);
 int outstat(void);
 int poll(faddr *, int);
+int reset(faddr *);
 int freq(faddr *, char *);
 
 
