@@ -4695,6 +4695,10 @@ v0.33.20        10-Feb-2002
 
 	mbout:
 		The status display has now 9 digits for the outbound size.
+		New command, mbout reset <node>, unconditionally resets the
+		nodes "try" counter, ie. make an undiable node try to call 
+		again.
+		The status command displays the call attempts.
 
 	mbsebbs:
 		On some systems the download taglists contained garbage after
